<resources>
    <string name="app_name">UniHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_timetable">Time Table</string>
    <string name="title_notes">Notes</string>
    <string name="title_todo">ToDo</string>
    <string name="title_grades">Grades</string>
    <string name="title_reminder">Reminder</string>
    <string name="sort_a_z">Sort: A-Z</string>
    <string name="sort_price_ascending">Sort: Price ascending</string>
    <string name="sort_price_descending">Sort: Price descending</string>
    <string name="filter_drinks">Filter: Drinks</string>
    <string name="filter_all">Filter: All</string>
    <string name="filter_food">Filter: Food</string>
    <string name="filter_dessert">Food: Dessert</string>
</resources>
